Created unit test system that runs on the esp32c3

--- a/firmware/Core/CMakeLists.txt
+++ b/firmware/Core/CMakeLists.txt
@@ -1,9 +1,9 @@
 # Define the source and include directories
-set(INCLUDE_DIRS Inc)
+set(INCLUDE_DIRS Inc Inc/unit_tests)
 set(SRC_DIR Src)
 
-# Automatically include all .c files in src
-file(GLOB SRC_FILES "${SRC_DIR}/*.c")
+# Automatically include all .c files in Core/Src and Core/Src/unit_tests
+file(GLOB SRC_FILES "${SRC_DIR}/*.c" "${SRC_DIR}/unit_tests/*.c")
 
 # Register the component with ESP-IDF
 idf_component_register(SRCS ${SRC_FILES}
